force-app/main/default/objects/ODL_Engagement_Threshold__mdt/ODL_Engagement_Threshold__mdt.object-meta.xml
<CustomObject>
    <label>ODL Engagement Threshold</label>
    <pluralLabel>ODL Engagement Thresholds</pluralLabel>
</CustomObject>