force-app/main/default/objects/ODL_Engagement_Threshold__mdt/fields/Going_Dark_Min_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Going_Dark_Min_Attempts__c</fullName>
    <label>Going Dark Min Attempts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>