force-app/main/default/objects/ODL_Engagement_Threshold__mdt/fields/Going_Dark_With_Attempts_Days__c.field-meta.xml
<CustomField>
    <fullName>Going_Dark_With_Attempts_Days__c</fullName>
    <label>Going Dark With Attempts Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>