force-app/main/default/objects/ODL_Engagement_Threshold__mdt/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>