force-app/main/default/objects/ODL_Engagement_Threshold__mdt/fields/Slowing_Days__c.field-meta.xml
<CustomField>
    <fullName>Slowing_Days__c</fullName>
    <label>Slowing Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>